--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -92,3 +92,62 @@
   font-weight: 500;
   cursor: pointer;
 }
+
+/*      TEST OF THE REQUEST OF FRENDSHIP    */
+
+.req-container {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+  font-size: 0.7rem;
+}
+
+.req-container img {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+
+.req-container .btn {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 24px;
+  text-align: center;
+  font-size: 0.5rem;
+  font-weight: 600;
+  letter-spacing: 0.015rem;
+  cursor: pointer;
+  box-shadow: 1px 1px 3px 1px rgba(161, 162, 162, 0.5);
+}
+
+.req-container .b1 {
+  background-color: rgba(159, 229, 254, 0.8);
+  border-radius: 4px;
+  border: none;
+  transition: 0.1s ease-out;
+  text-transform: uppercase;
+}
+
+.b1:active {
+  transform: scale(0.98);
+  box-shadow: 1px 1px 2px 1px rgba(161, 162, 162, 0.5);
+}
+
+.req-container .b2 {
+  background-color: rgba(236, 135, 135, 0.75);
+  border-radius: 4px;
+  transition: 0.1s ease-out;
+  text-transform: uppercase;
+}
+
+.b2:active {
+  transform: scale(0.98);
+  box-shadow: 1px 1px 2px 1px rgba(161, 162, 162, 0.5);
+}
+
+.username {
+  text-transform: uppercase;
+}
