--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,7 +1,13 @@
 .sidebar {
   flex: 3;
   height: calc(100vh - 50px);
-  background-color: rgb(48, 130, 123, 0.55);
+  background-image: linear-gradient(
+    to top,
+    #f3e7e9 0%,
+    #e3eeff 99%,
+    #e3eeff 100%
+  );
+  /* background-color: rgb(48, 130, 123, 0.55); */
   position: sticky;
   top: 50px;
   overflow-y: scroll;
@@ -28,7 +34,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  color: #e0dfdb;
+  color: #1c180b;
 }
 
 .sidebarListItem {
